<resources>
    <string name="app_name">Progr3SS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">Leanback MainActivity</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="default_web_client_id">YOUR_GOOGLE_CLIENT_ID.apps.googleusercontent.com</string>
    <string name="welcome_back">Welcome back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="login_with_google">Login with Google</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_account_header">Create account</string>
    <string name="register">Register</string>
    <string name="register_with_google">Register with Google</string>
    <string name="already_have_account_login">Already have an account? Login</string>
    <string name="reset_password">Reset Password</string>
    <string name="send_reset_email">Send Reset Email</string>

    <!-- Schedule Strings -->
    <string name="habit_name">Habit Name</string>
    <string name="please_select_habit">Please select a habit</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="every_day">Every day</string>
    <string name="weekdays">Weekdays</string>
    <string name="weekends">Weekends</string>
    <string name="custom">Custom</string>
    <string name="goal">Goal</string>
    <string name="amount">Amount</string>
    <string name="select_unit">Select unit</string>
    <string name="partner_optional">Partner(Optional)</string>
    <string name="choose_partner">Choose partner</string>
    <string name="reminders">Reminders</string>
    <string name="reminders_description">Get notifications to stay on track</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="create_schedule">Create Schedule</string>
    <string name="type_or_select_habit">Type or select habit name</string>
    <string name="select_days">Select Days</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="create_new_habit">Create New Habit</string>
    <string name="description_optional">Description (Optional)</string>
    <string name="category">Category</string>
    <string name="goal_optional">Goal (Optional)</string>
</resources>